--- a/games.html
+++ b/games.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>
-  Site Name
+  Games
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="../pokedex/main.css" rel="stylesheet">
-
   <link rel="icon" type="image/png" href="../pokedex/images/pokeball.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
   rel="stylesheet">
  
+</head>
 
+<body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   
     <a class="navbar-brand" href="#">Site Name</a>
@@ -44,21 +45,11 @@
       
     </div>
   </nav>
-</head>
-
-<body>
-
   <header>
-    <h1>Pokemon Evolution</h1>
-    <h2>Enter a Pokémon name to display its evolution</h2>
+   
   </header>
   <main>
-    <div id="input">
-      <label for="poke-name">Pokemon Name: </label>
-      <input type="text" id="poke-name" name="poke-name">
-    </div>
-    <div id="poke-evolution">
-    </div>
+   <h1>Games</h1>
   </main>
   <footer>
     <p>
