--- a/index.html
+++ b/index.html
@@ -48,15 +48,11 @@
 
 <body>
 
-  <header>
-    <h1>Pokemon Evolution</h1>
-    <h2>Enter a Pokémon name to display its evolution</h2>
-  </header>
   <main>
-    <div id="input">
-      <label for="poke-name">Pokemon Name: </label>
-      <input type="text" id="poke-name" name="poke-name">
-    </div>
+      <form action="searchedPokemon.html" method="GET">
+        <input type="text" id="poke-name" name="poke-name" placeholder="Search for Pokemon">
+      </form>
+      <button type="submit">Search</button>
     <div id="poke-evolution">
     </div>
   </main>
