--- a/searchedPokemon.html
+++ b/searchedPokemon.html
@@ -41,16 +41,30 @@
           <a class="nav-link" href="games.html">Games</a>
         </li>
       </ul>
-
-      <div id="poke-evolution">
+      
     </div>
+  </nav>
+</head>
 
+<body>
+
+  <main>
+      <form id="input" action="searchedPokemon.html" method="GET">
+        <input type="text" id="poke-name" name="poke-name" placeholder="Search for Pokemon">
+      </form>
+      <button type="submit">Search</button>
+    <div id="poke-evolution">
+    </div>
+  </main>
+  <footer>
+    <p>
+      This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
+    </p>
+  </footer>
   <script src="app.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-
-
 
 </html>
