--- a/searchedPokemon.html
+++ b/searchedPokemon.html
@@ -16,7 +16,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   
-    <a class="navbar-brand" href="#">Site Name</a>
+    <a class="navbar-brand" href="#">Searched</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -48,20 +48,28 @@
 
 <body>
 
-  <main>
+    <main>
       <form id="input" action="searchedPokemon.html" method="GET">
-        <input type="text" id="poke-name" name="poke-name" placeholder="Search for Pokemon">
+        <div class="container">
+          <input type="text" id="searchedPokemon" name="poke-name" placeholder="Search for Pokemon" />
+          <button id="searchBtn">Search</button>
+        </div>
+
       </form>
-      <button type="submit">Search</button>
-    <div id="poke-evolution">
-    </div>
-  </main>
+          <div id="charactersList">
+  
+          </div>
+        
+    </main>
+  
   <footer>
     <p>
       This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
     </p>
   </footer>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
+  <script src="result.js"></script>
+  <script src="result2.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
