added prediction in search box

--- a/searchedPokemon.html
+++ b/searchedPokemon.html
@@ -51,7 +51,10 @@
     <main>
       <form id="input" action="searchedPokemon.html" method="GET">
         <div class="container">
-          <input type="text" id="searchedPokemon" name="poke-name" placeholder="Search for Pokemon" />
+          <input type="text" id="searchedPokemon" name="poke-name" placeholder="Search for Pokemon" autocomplete="off" list="pokemonNameList" required />
+          <datalist>
+
+          </datalist>
           <button id="searchBtn">Search</button>
         </div>
 
@@ -69,7 +72,7 @@
   </footer>
   <!-- <script src="app.js"></script> -->
   <script src="result.js"></script>
-  <script src="result2.js"></script>
+  <script src="prediction.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
