changed searchedPokemon.html to results.html

--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
 <body>
 
     <main>
-      <form id="input" action="searchedPokemon.html" method="GET">
+      <form id="input" action="results.html" method="GET">
         <div class="container">
           <input type="text" id="searchedPokemon" name="poke-name" placeholder="Search for Pokemon" autocomplete="off" list="pokemonNameList" required />
           <datalist>
