--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
   <main>
-      <form id="input" action="searchedPokemon.html" method="GET">
+      <form id="input" action="results.html" method="GET">
         <div class="container">
           <input type="text" class="input" id="searchedPokemon" name="poke-name" placeholder="Search for Pokemon" autocomplete="off" list="pokemonNameList" required />
           <datalist>
