--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>
-  Site Name
+  Pokepedia
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="main.css" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="/images/pokeball.png">
+  <link rel="icon" type="image/png" href="/images/icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
   rel="stylesheet">
@@ -16,7 +16,9 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   
-    <a class="navbar-brand" href="#">Site Name</a>
+    <a class="navbar-brand" href="#">
+      <img src="/images/icon.png" alt="" width="30" height="30">
+      Poképedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
