--- a/trainerToby.html
+++ b/trainerToby.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="../pokedex/main.css" rel="stylesheet">
   <!-- https://www.freeiconspng.com/thumbs/pokeball-png/pokeball-transparent-png-2.png -->
-  <link rel="icon" type="image/png" href="../pokedex/images/pokeball.png">
+  <link rel="icon" type="image/png" href="/images/icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
   rel="stylesheet">
