--- a/results.html
+++ b/results.html
@@ -69,9 +69,9 @@
           </div>
 
           <div id="pokeSpriteImage"></div>
-          
-        
         </div>
+
+        <h3>Evolutions</h3>
         <div id="poke-evolution"></div>
       </div>
 
