styling on home page

--- a/results.html
+++ b/results.html
@@ -14,7 +14,7 @@
   rel="stylesheet">
  
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark">
   
     <a class="navbar-brand" href="#">
       <img src="/images/icon.png" alt="" width="30" height="30">
