added moves and abilities to results html

--- a/results.html
+++ b/results.html
@@ -66,6 +66,12 @@
           <div id="pokeInfo">
             <div id="pokemonName"></div>
             <div id="pokemonBio"></div>
+            <div id = "pokeMoves"></div>
+            <div id = "pokeAbility"></div>
+            <label for="pokeAbilities">Abilities:</label>
+          <select name="pokeAbilities" id="ability"></select>
+          <label for="pokeMoves">Moves:</label>
+          <select name="pokeMoves" id="moves"></select>
           </div>
 
           <div id="pokeSpriteImage"></div>
@@ -74,6 +80,8 @@
         <h3>Evolutions</h3>
         <div id="poke-evolution"></div>
       </div>
+
+
 
         
     </main>
