styling on results

--- a/results.html
+++ b/results.html
@@ -66,12 +66,16 @@
           <div id="pokeInfo">
             <div id="pokemonName"></div>
             <div id="pokemonBio"></div>
-            <div id = "pokeMoves"></div>
-            <div id = "pokeAbility"></div>
-            <label for="pokeAbilities">Abilities:</label>
-          <select name="pokeAbilities" id="ability"></select>
-          <label for="pokeMoves">Moves:</label>
-          <select name="pokeMoves" id="moves"></select>
+            <div id="pokeSkillsContainer">
+              <div>
+                <label for="pokeAbilities">Abilities:</label>
+              <select name="pokeAbilities" id="ability"></select>  
+              </div>
+              <div>
+                <label for="pokeMoves">Moves:</label>
+                <select name="pokeMoves" id="moves"></select>
+              </div>
+            </div>
           </div>
 
           <div id="pokeSpriteImage"></div>
