--- a/results.html
+++ b/results.html
@@ -91,9 +91,7 @@
     </main>
   
   <footer>
-    <p>
-      This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
-    </p>
+      This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data
   </footer>
   
   <script src="/js/result.js"></script>
