--- a/results.html
+++ b/results.html
@@ -66,6 +66,8 @@
           <div id="pokeInfo">
             <div id="pokemonName"></div>
             <div id="pokemonBio"></div>
+            <div id="pokedexNumber"></div>
+            <div id="baseStats"></div>
             <div id="pokeSkillsContainer">
               <div>
                 <label for="pokeAbilities">Abilities:</label>
