abilites moves dropdown list done

--- a/results.html
+++ b/results.html
@@ -71,11 +71,13 @@
             <div id="pokeSkillsContainer">
               <div>
                 <label for="pokeAbilities">Abilities:</label>
-              <select name="pokeAbilities" id="ability"></select>  
+              <select name="pokeAbilities" id="ability"></select>
+              <div id="abilitiesDetails"></div>  
               </div>
               <div>
                 <label for="pokeMoves">Moves:</label>
                 <select name="pokeMoves" id="moves"></select>
+                <div id="movesDetails"></div>
               </div>
             </div>
           </div>
