--- a/trainerChrs.html
+++ b/trainerChrs.html
@@ -6,7 +6,7 @@
    Chris
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="../pokedex/main.css" rel="stylesheet">
+  <link href="/css/profile.css" rel="stylesheet">
   <!-- https://www.freeiconspng.com/thumbs/pokeball-png/pokeball-transparent-png-2.png -->
   <link rel="icon" type="image/png" href="/images/icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,9 +16,11 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <nav class="navbar navbar-expand-lg navbar-dark">
   
-    <a class="navbar-brand" href="#">Site Name</a>
+    <a class="navbar-brand" href="#">
+      <img src="/images/icon.png" alt="" width="30" height="30">
+      Poképedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -26,21 +28,20 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="../pokedex/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Trainers
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../pokedex/trainerToby.html">Toby</a>
-            <a class="dropdown-item" href="../pokedex/trainerCristobal.html">Cristobal</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="../pokedex/trainerChrs.html">Chris</a>
+            <a class="dropdown-item" href="trainerToby.html">Toby</a>
+            <a class="dropdown-item" href="trainerCristobal.html">Cristobal</a>
+            <a class="dropdown-item" href="trainerChrs.html">Chris</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pokedex/games.html">Games</a>
+          <a class="nav-link" href="games.html">Games</a>
         </li>
       </ul>
       
