drop down game menu pop up added

--- a/whosThatPokemon.html
+++ b/whosThatPokemon.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../pokedex/pokeGame/public/styles.css">
+  <link rel="stylesheet" type="text/css" href="/pokeGame/public/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 
@@ -19,17 +19,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="../pokedex/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Trainers
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../pokedex/trainerToby.html">Toby</a>
-            <a class="dropdown-item" href="../pokedex/trainerCristobal.html">Cristobal</a>
+            <a class="dropdown-item" href="/trainerToby.html">Toby</a>
+            <a class="dropdown-item" href="/trainerCristobal.html">Cristobal</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="../pokedex/trainerChrs.html">Chris</a>
+            <a class="dropdown-item" href="/trainerChrs.html">Chris</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -38,7 +38,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://deusmalsith.github.io/pokemon-battle-system/">Pokémon Battle</a>
-              <a class="dropdown-item" href="../pokedex/whosThatPokemon.html">Who's that Pokémon</a>
+              <a class="dropdown-item" href="/whosThatPokemon.html">Who's that Pokémon</a>
               
       </ul>
       
@@ -68,8 +68,8 @@
       This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
     </p>
   </footer>
-  <script src="../pokedex/pokeGame/public/api.js"></script>
-  <script src="../pokedex/pokeGame/public/index.js"></script>
+  <script src="/pokeGame/public/api.js"></script>
+  <script src="/pokeGame/public/index.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
