--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
             <a class="dropdown-item" href="trainerChrs.html">Chris</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="games.html">Games</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Games
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" onclick="basicPopup2(this.href);return false" href="pokebattle.html">PokeBattle</a>
+            <a class="dropdown-item" onclick="basicPopup(this.href);return false" href="whosThatPokemon.html">Who's That Pokemon!?</a>
+          </div>
         </li>
+
       </ul>
       
     </div>
