centered search box

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div id="pokeContainer">
       <div id="searchBoxContainer">
           <form id="input" action="results.html" method="GET">
-            <div>
+            <div id="inputContainer">
               <input type="text" class="input" id="searchedPokemon" name="poke-name" placeholder="Search for Pokemon" autocomplete="off" list="pokemonNameList" required />
               <datalist>
                 
