--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   Pokepedia
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="../pokemonWebsite/main.css" rel="stylesheet">
+  <link href="main.css" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="/images/icon.png">
+  <link rel="icon" type="image/png" href="images/icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
   rel="stylesheet">
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#ef5350;">
   
-    <a class="navbar-brand" href="../pokemonWebsite/index.html">PokéPedia</a>
+    <a class="navbar-brand" href="index.html">PokéPedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,16 +28,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="../pokemonWebsite/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Trainers
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../pokemonWebsite/trainerToby.html">Toby</a>
-            <a class="dropdown-item" href="../pokemonWebsite/trainerCristobal.html">Cristobal</a>
-            <a class="dropdown-item" href="../pokemonWebsite/trainerChrs.html">Chris</a>
+            <a class="dropdown-item" href="trainerToby.html">Toby</a>
+            <a class="dropdown-item" href="trainerCristobal.html">Cristobal</a>
+            <a class="dropdown-item" href="trainerChrs.html">Chris</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -45,8 +45,8 @@
             Games
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../pokemonWebsite/pokebattle.html">Pokémon Battle</a>
-            <a class="dropdown-item" href="../pokemonWebsite/whosThatPokemon.html">Who's that Pokémon</a>
+            <a class="dropdown-item" href="pokebattle.html">Pokémon Battle</a>
+            <a class="dropdown-item" href="whosThatPokemon.html">Who's that Pokémon</a>
             
             
           </div>
@@ -84,10 +84,10 @@
   <footer>
       This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
   </footer>
-  <script src="../pokemonWebsite/js/result.js"></script>
-  <script src="../pokemonWebsite/js/prediction.js"></script>
-  <script src="../pokemonWebsite/js/evolutions.js"></script>
-  <script src="../pokemonWebsite/js/home.js"></script>
+  <script src="/js/result.js"></script>
+  <script src="/js/prediction.js"></script>
+  <script src="/js/evolutions.js"></script>
+  <script src="/js/home.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
