nav bar links fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#ef5350;">
   
-    <a class="navbar-brand" href="index.html">PokéPedia</a>
+    <a class="navbar-brand" href="index.html">
+      <img src="images/icon.png" alt="" width="25" height=25" class="d-inline-block align-text-top">
+      PokéPedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
