--- a/trainerToby.html
+++ b/trainerToby.html
@@ -20,7 +20,9 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#ef5350;">
   
-    <a class="navbar-brand" href="../pokemonWebsite/index.html">PokéPedia</a>
+    <a class="navbar-brand" href="index.html">
+      <img src="images/icon.png" alt="" width="25" height=25" class="d-inline-block align-text-top">
+      PokéPedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -28,16 +30,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="../pokemonWebsite/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Trainers
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../pokemonWebsite/trainerToby.html">Toby</a>
-            <a class="dropdown-item" href="../pokemonWebsite/trainerCristobal.html">Cristobal</a>
-            <a class="dropdown-item" href="../pokemonWebsite/trainerChrs.html">Chris</a>
+            <a class="dropdown-item" href="trainerToby.html">Toby</a>
+            <a class="dropdown-item" href="trainerCristobal.html">Cristobal</a>
+            <a class="dropdown-item" href="trainerChrs.html">Chris</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -45,8 +47,9 @@
             Games
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../pokemonWebsite/pokebattle.html">Pokémon Battle</a>
-            <a class="dropdown-item" href="../pokemonWebsite/whosThatPokemon.html">Who's that Pokémon</a>
+            <a class="dropdown-item" href="pokebattle.html">Pokémon Battle</a>
+            <a class="dropdown-item" href="whosThatPokemon.html">Who's that Pokémon</a>
+            
             
           </div>
         </li>
