--- a/results.html
+++ b/results.html
@@ -79,10 +79,12 @@
           <div id="pokeInfo">
             <div id="pokemonName"></div>
             <div id="pokedexNumber"></div>
+            <div id="pokemonType"></div>
             <div id="pokemonBio"></div>
             <div id="pokeSpriteImage"></div>
             
             <div class="column1">
+              <h5>Stats</h5>
               <div class="column">
                <div id="baseStats"></div>
               </div> 
