--- a/trainerToby.html
+++ b/trainerToby.html
@@ -8,9 +8,7 @@
   </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link href="../pokemonWebsite/css/profile.css" rel="stylesheet">
-
- 
+  <link href="/css/profile.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
   rel="stylesheet">
@@ -56,6 +54,12 @@
       </ul>
       
     </div>
+
+    <form id="input" action="results.html" method="GET" class="d-flex justify-content-end">
+      <input class="form-control me-2" id="searchedPokemon" name="poke-name" type="text" placeholder="Search for Pokémon" aria-label="Search" autocomplete="off" list="pokemonNameList" required />
+      <button class="btn" id="searchBtn" type="submit">Search</button>
+      <datalist></datalist>
+    </form>
   </nav>
 
   <div class="columns mt-5 mb-5">
