--- a/whosThatPokemon.html
+++ b/whosThatPokemon.html
@@ -8,7 +8,6 @@
 </head>
 
 <body>
-<header>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#ef5350;">
   
     <a class="navbar-brand" href="index.html">
@@ -47,33 +46,40 @@
       </ul>
       
     </div>
+
+    <form id="input" action="results.html" method="GET" class="d-flex justify-content-end">
+      <input class="form-control me-2" id="searchedPokemon" name="poke-name" type="text" placeholder="Search for Pokémon" aria-label="Search" autocomplete="off" list="pokemonNameList" required />
+      <button class="btn" id="searchBtn" type="submit">Search</button>
+      <datalist></datalist>
+    </form>
   </nav>
-</header>
+
   
   <main class="fetching">
+    <div id="pokemonGameContainer">
+      <div id="pokemon-container">
+        <img id="pokeball" src="https://res.cloudinary.com/dzynqn10l/image/upload/v1633196610/Msc/pokeball_zeoqii.webp">
+        <img id="pokemon-image" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D">
+      </div>
+  
+      <div id="answer">
+        <div id="bg-overlay"></div>
+        <div id="text-overlay"></div>
+      </div>
+  
+      <section id="controls">
+        <button id="play">Play</button>
+        <div id="choices"></div>
+      </section>
 
-    <div id="pokemon-container">
-      <img id="pokeball" src="https://res.cloudinary.com/dzynqn10l/image/upload/v1633196610/Msc/pokeball_zeoqii.webp">
-      <img id="pokemon-image" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D">
     </div>
-
-    <div id="answer">
-      <div id="bg-overlay"></div>
-      <div id="text-overlay"></div>
-    </div>
-
-    <section id="controls">
-      <button id="play">Play</button>
-      <div id="choices"></div>
-    </section>
   </main>
   <footer>
-    <p>
       This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
-    </p>
   </footer>
-  <script src="../pokemonWebsite/pokeGame/public/api.js"></script>
-  <script src="../pokemonWebsite/pokeGame/public/index.js"></script>
+  <script src="/pokeGame/public/api.js"></script>
+  <script src="/pokeGame/public/index.js"></script>
+  <script src="results.html"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
