--- a/trainerToby.html
+++ b/trainerToby.html
@@ -75,17 +75,17 @@
                     <div class="columns">
                         <div id="resizeCol" class="column is-one-third">
                             <div>
-                                <img width=100 alt="pokemon" src="##" />
+                                <img width=100 alt="pokemon" src="/images/me1.jpg" />
                             </div>
                             
                         </div>
                         <div class="column">
-                            <h4><strong>Insert Name</strong></h4>
+                            <h4><strong>Toby Hoang</strong></h4>
                             <p>Male</p>
                             <p></p>
                             <p></p>
-                            <a href='https://www.linkedin.com/in/username'><img src='../pokemonWebsite/images/linkedinIcon.png' width='20'></a>
-                            <a href='https://github.com/username'><img src='../pokemonWebsite/images/gitHubIcon.png' width='20'></a>
+                            <a href='https://www.linkedin.com/in/username'><img src='/images/linkedinIcon.png' width='20'></a>
+                            <a href='https://github.com/username'><img src='/images/gitHubIcon.png' width='20'></a>
                         </div>
                     </div>
 
@@ -102,24 +102,24 @@
                 <div class="content">
                     <ul id="pokemonCharacteristics" class="hoverable_list">
                         <li class="hoverable_list__item">
-                            <img src="../pokemonWebsite/images/height.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
+                            <img src="/images/height.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Height</strong></span><br />
-                            <span>Insert Height</span>
+                            <span>5'11</span>
                         </li>
                         <li class="hoverable_list__item">
-                            <img src="../pokemonWebsite/images/eyecolor.png" alt="Image" class="characteristics__image" style="width: 50px" />
+                            <img src="/images/eyecolor.png" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Eye Color</strong></span><br />
-                            <span>Insert Eye Color</span>
+                            <span>Brown</span>
                         </li>
                         <li class="hoverable_list__item">
-                            <img src="../pokemonWebsite/images/haircolor.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
+                            <img src="/images/haircolor.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Hair Color</strong></span><br />
-                            <span class="infoText">Inset Hair Color</span>
+                            <span class="infoText">Black</span>
                         </li>
                         <li class="hoverable_list__item">
-                            <img src="../pokemonWebsite/images/gaicon.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
+                            <img src="/images/gaicon.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Location</strong></span><br />
-                            <span>Insert Location</span>
+                            <span>Atlanta</span>
                         </li>
                     </ul>
                 </div>
@@ -136,8 +136,8 @@
             <div class="card-content">
                 <div class="content">
                     <div class="about-me-wrapper">
-                        <img src="##" alt="Profile PIc">
-                        <p>Inset Profile</p>
+                        <!-- <img src="##" alt="Profile PIc"> -->
+                        <p>Heya! I decided to pursue a career in coding since I always had an interest in it.  The last time I touched coding was when I was in middle school in the 7th grade. We were building simple webpages.  I remember how fun it was because it was like solving a puzzle.  </p>
                     </div>
                 </div>
             </div>
