--- a/whosThatPokemon.html
+++ b/whosThatPokemon.html
@@ -55,8 +55,8 @@
   </nav>
 
   
-  <main class="fetching">
-    <div id="pokemonGameContainer">
+  <div class="game-page">
+    <div class="pokemon-game fetching">
       <div id="pokemon-container">
         <img id="pokeball" src="https://res.cloudinary.com/dzynqn10l/image/upload/v1633196610/Msc/pokeball_zeoqii.webp">
         <img id="pokemon-image" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs%3D">
@@ -73,7 +73,7 @@
       </section>
 
     </div>
-  </main>
+  </div>
   <footer>
       This website uses <a href="https://pokeapi.co/" target="_blank">PokéAPI</a> for Pokémon data.
   </footer>
