--- a/trainerChrs.html
+++ b/trainerChrs.html
@@ -87,7 +87,7 @@
                             <p></p>
                             <p></p>
                             <a href='https://www.linkedin.com/in/username'><img src='/images/linkedinIcon.png' width='20'></a>
-                            <a href='https://github.com/username'><img src='/images/gitHubIcon.png' width='20'></a>
+                            <a href='https://github.com/cgaunt58'><img src='/images/gitHubIcon.png' width='20'></a>
                         </div>
                     </div>
 
