added stats to moves

--- a/results.html
+++ b/results.html
@@ -105,7 +105,9 @@
                 <div id="pokeMovesContainer">
                    <label for="pokeMoves">Moves:</label>
                    <select name="pokeMoves" id="moves"></select>
-                   <div id="movesDetails"></div>
+                   <div>
+                     <div id="movesDetails"></div>
+                   </div>
                 </div>
                 </div>
             </div>
