--- a/pokebattle.html
+++ b/pokebattle.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>
-    PokéPedia - Games
+   Games - Games - Pokémon Battle
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="css/games.css" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/pokeball.png">
+  <link rel="icon" type="image/png" href="images/icon.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap"
   rel="stylesheet">
