--- a/trainerCristobal.html
+++ b/trainerCristobal.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="/css/profile.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/icon.png">
 
  
   <link rel="preconnect" href="https://fonts.gstatic.com">
