trainer profile edits

--- a/trainerCristobal.html
+++ b/trainerCristobal.html
@@ -78,12 +78,12 @@
                     <div class="columns">
                         <div id="resizeCol" class="column is-one-third">
                             <div>
-                                <img width=100 alt="pokemon" src="##" />
+                                <img width=100 alt="pokemon" src="/images/gym.jpg" />
                             </div>
                             
                         </div>
                         <div class="column">
-                            <h4><strong>Insert Name</strong></h4>
+                            <h4><strong>Cristobal Martinez</strong></h4>
                             <p>Male</p>
                             <p></p>
                             <p></p>
@@ -107,22 +107,22 @@
                         <li class="hoverable_list__item">
                             <img src="/images/height.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Height</strong></span><br />
-                            <span>Insert Height</span>
+                            <span>5'10"</span>
                         </li>
                         <li class="hoverable_list__item">
                             <img src="/images/eyecolor.png" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Eye Color</strong></span><br />
-                            <span>Insert Eye Color</span>
+                            <span>Brown</span>
                         </li>
                         <li class="hoverable_list__item">
                             <img src="/images/haircolor.jpg" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Hair Color</strong></span><br />
-                            <span class="infoText">Inset Hair Color</span>
+                            <span class="infoText">Black</span>
                         </li>
                         <li class="hoverable_list__item">
                             <img src="/images/texasicon.png" alt="Image" class="characteristics__image" style="width: 50px" />
                             <span class="characteristics__large_text"><strong>Location</strong></span><br />
-                            <span>Insert Location</span>
+                            <span>Houston, TX</span>
                         </li>
                     </ul>
                 </div>
@@ -139,8 +139,8 @@
             <div class="card-content">
                 <div class="content">
                     <div class="about-me-wrapper">
-                        <img src="##" alt="Profile PIc">
-                        <p>Inset Profile</p>
+                        <img src="/images/crismtz.jpg" alt="Profile PIc">
+                        <p>Hello everyone! I am dipping my toes into the coding world to become a software developer. I am from Houston, Texas. I am one who likes challenges and coding has proven to provide those challanges for me. I am eager to absorb everything from this cohort and utilize it in my near future. I enjoy playing and writing music, being active, and sleeping in.</p>
                     </div>
                 </div>
             </div>
