--- a/trainerToby.html
+++ b/trainerToby.html
@@ -137,7 +137,7 @@
             <div class="card-content">
                 <div class="content">
                     <div class="about-me-wrapper">
-                        <!-- <img src="##" alt="Profile PIc"> -->
+                        <img src="/images/tobylay.jpg" alt="Profile PIc">
                         <p>Heya! I decided to pursue a career in coding since I always had an interest in it.  The last time I touched coding was when I was in middle school in the 7th grade. We were building simple webpages.  I remember how fun it was because it was like solving a puzzle.  </p>
                     </div>
                 </div>
